# hunter

./: .travis.yml  appveyor.yml
_data/projects/: Boost-useBoostConfig.json  Boost.json
cmake/configs/: default.cmake
cmake/find/: Findgmp.cmake
cmake/projects/Boost/: hunter.cmake
cmake/projects/Boost/schemes/: url_sha1_boost_library.cmake.in
cmake/projects/Gettext/: hunter.cmake
cmake/projects/Immer/: hunter.cmake
cmake/projects/OpenSC/: hunter.cmake
cmake/projects/OpenSC/schemes/: url_sha1_opensc_autotools.cmake.in
cmake/projects/PocoCpp/: hunter.cmake
cmake/projects/botan/: hunter.cmake
cmake/projects/botan/schemes/: url_sha1_botan.cmake.in
cmake/projects/gmp/: hunter.cmake
cmake/projects/gnutls/: hunter.cmake
cmake/projects/libtasn1/: hunter.cmake
cmake/projects/libusb/: hunter.cmake
cmake/projects/macchina/: hunter.cmake
cmake/projects/neopg/: hunter.cmake
cmake/projects/nettle/: hunter.cmake
cmake/projects/nettle/schemes/: url_sha1_nettle_autotools.cmake.in
cmake/projects/nettle/scripts/: pkgconfig-export-targets.cmake.in
cmake/projects/openct/: hunter.cmake
cmake/projects/openct/schemes/: url_sha1_openct_autotools.cmake.in
examples/Boost/: CMakeLists.txt
examples/Boost-log/: CMakeLists.txt
examples/Boost-log-shared/: CMakeLists.txt
examples/Gettext/: CMakeLists.txt
examples/OpenSC/: CMakeLists.txt
examples/gmp/: CMakeLists.txt
examples/gnutls/: CMakeLists.txt
examples/libtasn1/: CMakeLists.txt
examples/libusb/: CMakeLists.txt
examples/macchina/: CMakeLists.txt
examples/neopg/: CMakeLists.txt
examples/nettle/: CMakeLists.txt
examples/openct/: CMakeLists.txt
scripts/: pkgconfig-export-targets.cmake.in
